# webapp-openai-assistant-demo

./: .gitignore  app.py  borrador.py  main.py  package-lock.json  package.json  pyproject.toml  time_management.py  user_goals.db  webpack.config.js
public/: bundle.js  index.html
src/: index.js  style.css
src/components/: chatbot.js  footer.js  header.js
static/css/: styles.css
storage/: default__vector_store.json  docstore.json  index_store.json
templates/: layout.html  login.html  signup.html
