[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
langchain = "0.1.0"
langchain-community = "^0.0.11"
openai = "1.7.1"
langchain-openai = "^0.0.2"
flask = "^3.0.0"
app = "^0.0.1"
llama-index = "^0.9.29"
numexpr = "^2.8.8"
react = "^4.3.0"
langchain-core = "^0.1.17"
flask-session = "^0.8.0"
gpt-index = "^0.8.42"
cs50 = "^9.3.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"